--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "macellan/phpexcel",
+    "name": "divtag-nl/phpexcel",
     "description": "PHPExcel - OpenXML - Read, Create and Write Spreadsheet documents in PHP - Spreadsheet engine",
     "keywords": ["PHP","Excel","OpenXML","xlsx","xls","spreadsheet"],
-    "homepage": "https://github.com/macellan/PHPExcel",
+    "homepage": "https://github.com/divtag-nl/PHPExcel",
     "type": "library",
     "license": "LGPL-2.1",
     "authors": [
